Always use "origin" repository